sc/source/core/tool/cellform.cxx
@@ -35,8 +35,7 @@ const ScFormulaCell* pLastFormulaTreeTop = nullptr;
 
 void ScCellFormat::GetString( ScRefCellValue& rCell, sal_uLong nFormat, OUString& rString,
                               Color** ppColor, SvNumberFormatter& rFormatter, const ScDocument* pDoc,
-                              bool bNullVals, bool bFormula, ScForceTextFmt eForceTextFmt,
-                              bool bUseStarFormat )
+                              bool bNullVals, bool bFormula, bool bUseStarFormat )
 {
     *ppColor = nullptr;
 
@@ -54,21 +53,7 @@ void ScCellFormat::GetString( ScRefCellValue& rCell, sal_uLong nFormat, OUString
             if (!bNullVals && nValue == 0.0)
                 rString.clear();
             else
-            {
-                if( eForceTextFmt == ftCheck )
-                {
-                    if( nFormat && rFormatter.IsTextFormat( nFormat ) )
-                        eForceTextFmt = ftForce;
-                }
-                if( eForceTextFmt == ftForce )
-                {
-                    OUString aTemp;
-                    rFormatter.GetOutputString( nValue, 0, aTemp, ppColor );
-                    rFormatter.GetOutputString( aTemp, nFormat, rString, ppColor );
-                }
-                else
-                    rFormatter.GetOutputString( nValue, nFormat, rString, ppColor, bUseStarFormat );
-            }
+                rFormatter.GetOutputString( nValue, nFormat, rString, ppColor, bUseStarFormat );
         }
         break;
         case CELLTYPE_FORMULA:
@@ -127,13 +112,13 @@ void ScCellFormat::GetString( ScRefCellValue& rCell, sal_uLong nFormat, OUString
 
 OUString ScCellFormat::GetString(
     ScDocument& rDoc, const ScAddress& rPos, sal_uLong nFormat, Color** ppColor,
-    SvNumberFormatter& rFormatter, bool bNullVals, bool bFormula, ScForceTextFmt eForceTextFmt )
+    SvNumberFormatter& rFormatter, bool bNullVals, bool bFormula )
 {
     OUString aString;
     *ppColor = nullptr;
 
     ScRefCellValue aCell(rDoc, rPos);
-    GetString(aCell, nFormat, aString, ppColor, rFormatter, &rDoc, bNullVals, bFormula, eForceTextFmt);
+    GetString(aCell, nFormat, aString, ppColor, rFormatter, &rDoc, bNullVals, bFormula);
     return aString;
 }
 
